# droidmind

./: 404.html  README.md  examples.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.cursor/rules/: 001_workspace.mdc
.github/workflows/: ci-cd.yml
docker/: index.html
docs/: app_management.md  doc-summary.txt  examples.txt  index.md  mcp-reference.md  mcp-src.txt  plan.md  project.md  quickstart.md  test_examples.py  ui_automation.md
droidmind/: __init__.py  adb.py  client.py  console.py  context.py  core.py  devices.py  filesystem.py  log.py  logger.py  networking.py  packages.py  prompts.py  resources.py  security.py  server.py  tools.py
droidmind/adb/: __init__.py  service.py  wrapper.py
droidmind/resources/: __init__.py  app_resources.py  device_info.py  filesystem.py  logs.py
droidmind/tools/: __init__.py  app_management.py  device_info.py  device_management.py  diagnostics.py  file_operations.py  logs.py  media.py  shell.py  ui.py
droidmind/utils/: console.py
examples/: README.md  example-server.py  sse-client-example.py
installation/: index.html
license/: index.html
mcp-reference/: index.html
plan/: index.html
quickstart/: index.html
scripts/: lint.py  release.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_adb_wrapper.py  test_app_management.py  test_device_manager.py  test_file_tools.py  test_log_resources.py  test_log_tools.py  test_server.py  test_ui_tools.py
user_manual/: index.html
user_manual/app_management/: index.html
user_manual/connecting_devices/: index.html
user_manual/device_diagnostics/: index.html
user_manual/device_management_actions/: index.html
user_manual/example_queries/: index.html
user_manual/file_system/: index.html
user_manual/security/: index.html
user_manual/shell_commands/: index.html
user_manual/ui_automation/: index.html
